# galaxy-conquest-game

./: .clinerules  .coverage  .gitignore  Makefile  README.md  config.toml  debug.py  galaxy_conquest.py  galaxy_conquest.py.bak  project_tree.txt  pyproject.toml  pytest.ini  requirements.txt  revert_imports.py  settings.py  update_imports.py
cline_docs/: codebaseSummary.md  currentTask.md  projectRoadmap.md  techStack.md  testing_guidelines.md
config/: README.md  prefs.toml.example
docs/: configuration.md  contributing.md  installation.md  license.md  project_structure.md  testing.md
game/: __init__.py  background.py  config.py  config_loader.py  constants.py  debug.py  empire.py  enums.py  game.py  logging_config.py  menu.py  notifications.py  persistence.py  planet.py  properties.py  resources.py  star_system.py  transitions.py
game/views/: __init__.py  galaxy.py  hover_utils.py  infopanel.py  planet.py  startup.py  system.py
saves/: autosave.json
tests/: __init__.py  conftest.py  mocks.py  test_background.py  test_config.py  test_empire.py  test_galaxy.py  test_game.py  test_game_coverage.py  test_hover_utils.py  test_infopanel.py  test_menu.py  test_notifications.py  test_persistence.py  test_planet.py  test_planet_view.py  test_resources.py  test_star_system.py  test_startup.py  test_system.py  test_transitions.py  test_view_panel_integration.py
