[tool.poetry]
name = "galaxy-conquest-game"
version = "0.1.0"
description = "A space exploration and conquest game"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "game"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame-gui = "0.6.9"
toml = "0.10.2"
numpy = "^1.20.0"
scipy = "^1.7.0"
pygame-ce = "2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-mock = "3.12.0"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
galaxy-conquest = "galaxy_conquest:main"
